# written-pronunciation

./: .gitignore  LICENSE  Pipfile  Procfile  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt
api/: filters.py  permissions.py  serializers.py  test_viewsets.py  tests.py  urls.py  views.py  viewsets.py
api/tests/: test_viewsets.py
dictionary/: admin.py  apps.py  models.py  test.py  tests.py  urls.py  views.py
dictionary/tests/: factories.py  test_models.py  test_views.py
static/css/: style.css
static/js/: theme.js
templates/: base.html  signup.html
templates/dictionary/: home.html  search.html  user_word_list.html  word_create.html  word_delete.html  word_detail.html  word_update.html
templates/registration/: login.html  signup.html
templates/users/: signup.html
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
users/tests/: factories.py  test_models.py  test_views.py
written_pronunciation/: asgi.py  settings.py  urls.py  wsgi.py
