[project]
name = "written-pronunciation"
version = "1.0.0"
description = "A written pronunciation site for Turkish hard of hearing and deaf people"
requires-python = ">=3.12"
dependencies = [
    "crispy-bootstrap5>=2024.10",
    "dj-rest-auth>=7.0",
    "django>=5.1,<5.2",
    "django-allauth>=64.0",
    "django-crispy-forms>=2.3",
    "django-environ>=0.11",
    "django-filter>=24.0",
    "djangorestframework>=3.15",
    "drf-spectacular>=0.27",
    "pyyaml>=6.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "django-test-plus>=2.3",
    "factory-boy>=3.3",
    "faker>=33.0",
    "pytest-django>=4.9",
]
